--- a/borrowingApp.html
+++ b/borrowingApp.html
@@ -240,8 +240,12 @@
           <p class="g" style="top: 7675px; font-size: 18px; line-height: 20px">Taking the Notifications tab and the lack of visibility of the borrow and lend tabs, we decided to conduct an A/B test. We created a different version of the notifications tab and used google analytics to randomize which user got version A or B. We distributed our app to 34 users that were interested in fashion, clothes shopping and/or have borrowed clothing from someone in the past. </p>
           <img src="googleAna.jpg" style = "top: 7750px; width: 900px; position: absolute; left: 225px" >
           <img src="AB.jpg" style = "top: 8250px; width: 900px; position: absolute; left: 225px" >
-          <p class="g" style="top: 9000px; font-size: 18px; line-height: 20px">We measured the amount of clicks on buttons on the borrow and lend tabs to see which version led to more views of the borrow and lend tabs. Design B had the most amount of clicks so we went with that design. <br> Additionally we received feedback from our peers on the branding of our app, the visibility of the shoes tab and the login page. We were told that we should appeal to our target audience more by rebranding our app, focusing more on the aesthetics of it. </p>
+          <p class="g" style="top: 8900px; font-size: 18px; line-height: 20px">We measured the amount of clicks on buttons on the borrow and lend tabs to see which version led to more views of the borrow and lend tabs. Design B had the most amount of clicks and was the preferred version by the instructor, so we went with that design. <br> Additionally we received feedback from our peers on the branding of our app, the visibility of the shoes tab and the login page. We were told that we should appeal to our target audience more by rebranding our app, focusing more on the aesthetics of it. </p>
 
+        </div>
+
+        <div>
+          <h4 class = "g" style="top: 9100px">Final Design</h4>
         </div>
 
 
