--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
   
     <h1 class = "intro">Hi I'm <span class = "name"> Sophia Dominguez</span> <br>a <span class = "UC">UX designer</span> <br> a third year at <span class = "school">UC San Diego.</h1>
     <h3 class = "look">Check out some of my work below </h3>
-    <a href = "borrowingApp.html"><img class = "project1" src="borrow.n.go.jpg"> </a>
+    <a href = "borrowingApp.html"><img class = "project1" src="coverPage.jpg"> </a>
 
       
     <a href = "borrowingApp.html"> <img class = "project3" src="borrow.n.go.jpg"> </div>
