--- a/aboutme.html
+++ b/aboutme.html
@@ -9,14 +9,72 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <style type="text/css">
       body{
-        background-color: ##fffaff;
+        background-color: #fffaff;
       }
       .rec{
-      position: absolute;
+        position: absolute;
       width: 100%;
       height: 100px;
       left: 1px;
       }
+
+      .intro{
+        position: absolute;
+      height: 52px;
+      left: 175px;
+      top: 182px;
+      font-family: Segoe UI;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 25px;
+      line-height: 40px;
+      color: #707070;
+      }
+      .look{
+      position: absolute;
+      height: 55px;
+      left: 488px;
+      top: 350px;
+      font-family: Segoe UI;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 20px;
+      line-height: 35px;
+      }
+      .project1{
+      position: absolute;
+      width: 1000px;
+      height: 275px;
+      left: 175px;
+      top: 200px;
+      border: 1px solid #000000;
+      box-sizing: border-box;
+      border-radius: 5px;
+      background-color: transparent;
+      }
+      .project1:hover {
+     -ms-transform: scale(1.1); /* IE 9 */
+      -webkit-transform: scale(1.1); /* Safari 3-8 */
+      transform: scale(1.1); 
+    }
+     
+      .project3
+      {
+      position: absolute;
+      width: 1000px;
+      height: 275px;
+      left: 175px;
+      top: 500px;
+      border: 1px solid #000000;
+      box-sizing: border-box;
+      border-radius: 5px;
+      background-color: transparent;
+      }
+      .project3:hover {
+     -ms-transform: scale(1.1); /* IE 9 */
+      -webkit-transform: scale(1.1); /* Safari 3-8 */
+      transform: scale(1.1); 
+    }
 
       .borrowing{
       position: absolute;
@@ -27,6 +85,16 @@
       font-size: 40px;
       line-height: 47px;
       text-align: center;
+      }
+
+      .name{
+        color: black;
+      }
+      .school{
+        color: #B78727;
+      }
+      .UC{
+        color: #274DB7;
       }
 
     /* This container is needed to position the front and back side */
@@ -65,6 +133,9 @@
   </div>
   
    
+
+    <p style="color: white; position: absolute; top: 1000px">     ...    </p>
+
       <!--<article style = "padding:10px;float: left; width:40%">
         <img src = "IMG_1668[3250].jpg" style = "height: 500px;">
       </article> -->
