--- a/projects.html
+++ b/projects.html
@@ -9,30 +9,95 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <style type="text/css">
       body{
-        background-color: #FFFFFF;
+        background-color: #fffaff;
       }
       .rec{
         position: absolute;
       width: 100%;
       height: 100px;
-      left: 0px;
-      top: 0px;
-      background: #B96060;
+      left: 1px;
       }
+
       .intro{
         position: absolute;
       height: 52px;
-      left: 250px;
+      left: 175px;
       top: 182px;
+      font-family: Segoe UI;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 25px;
+      line-height: 40px;
+      color: #707070;
+      }
+      .look{
+      position: absolute;
+      height: 55px;
+      left: 488px;
+      top: 350px;
+      font-family: Segoe UI;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 20px;
+      line-height: 35px;
+      }
+      .project1{
+      position: absolute;
+      width: 1000px;
+      height: 275px;
+      left: 175px;
+      top: 200px;
+      border: 1px solid #000000;
+      box-sizing: border-box;
+      border-radius: 5px;
+      background-color: transparent;
+      }
+      .project1:hover {
+     -ms-transform: scale(1.1); /* IE 9 */
+      -webkit-transform: scale(1.1); /* Safari 3-8 */
+      transform: scale(1.1); 
+    }
+     
+      .project3
+      {
+      position: absolute;
+      width: 1000px;
+      height: 275px;
+      left: 175px;
+      top: 500px;
+      border: 1px solid #000000;
+      box-sizing: border-box;
+      border-radius: 5px;
+      background-color: transparent;
+      }
+      .project3:hover {
+     -ms-transform: scale(1.1); /* IE 9 */
+      -webkit-transform: scale(1.1); /* Safari 3-8 */
+      transform: scale(1.1); 
+    }
+
+      .borrowing{
+      position: absolute;
+
       font-family: Roboto;
       font-style: normal;
       font-weight: normal;
-      font-size: 30px;
-      line-height: 35px;
+      font-size: 40px;
+      line-height: 47px;
+      text-align: center;
       }
-      .col-4{
-        top: 200px;
+
+      .name{
+        color: black;
       }
+      .school{
+        color: #B78727;
+      }
+      .UC{
+        color: #274DB7;
+      }
+
+    /* This container is needed to position the front and back side */
 
     </style>
 
@@ -52,13 +117,13 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
-               <a class = "nav-item nav-link" href = "aboutme.html" style = "padding-left: 20px"> About Me! </a>
+               <a class = "nav-item nav-link" href = "aboutme.html" style = "padding-left: 20px; color: #707070"> About Me! </a>
               </li>
               <li class="nav-item">
-                <a class = "nav-item nav-link active" href = "projects.html" style = "padding-left: 20px"> Projects <span class = "sr-only">(current)</span></a>
+                <a class = "nav-item nav-link active" href = "projects.html" style = "padding-left: 20px; color: #707070"> Projects <span class = "sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class = "nav-item nav-link" target = "_blank" href = "index.html" style = "padding-left: 20px"> Resume </a>
+                <a class = "nav-item nav-link" target = "_blank" href = "index.html" style = "padding-left: 20px; color: #707070"> Resume </a>
               </li>
             </ul>
           </div>
@@ -67,13 +132,11 @@
     </div>
   </div>
   
-        <h1 class = "intro">View some of my projects here!</h1>
-    <div class="row">
-      <div class="col-4"> <img src = "IMG_2446.jpg" height = "300px"></div>
-      <div class="col-4"> <img src = "IMG_2446.jpg" height = "300px"></div>
-      <div class="col-4"> <img src = "IMG_2446.jpg" height = "300px"></div>
-    </div>
-  
+   
+    <a href = "borrowingApp.html"><img class = "project1" src="coverPage.jpg"> </a> 
+    <a href = "borrowingApp.html"> <img class = "project3" src="borrow.n.go.jpg"> </div>
+    <p style="color: white; position: absolute; top: 800px">     ...    </p>
+
       <!--<article style = "padding:10px;float: left; width:40%">
         <img src = "IMG_1668[3250].jpg" style = "height: 500px;">
       </article> -->
