--- a/borrowingApp.html
+++ b/borrowingApp.html
@@ -245,7 +245,14 @@
         </div>
 
         <div>
-          <h4 class = "g" style="top: 9100px">Final Design</h4>
+          <h4 class = "g" style="top: 9040px">Final Design</h4>
+          <img src="Home.jpg" style="position: absolute; left: 150px; top: 9100px; height: 400px; border: 2px solid black">
+          <img src="Post.jpg" style="position: absolute; left: 400px; top: 9100px; height: 400px; border: 2px solid black">
+          <img src="Homescreen.jpg" style="position: absolute; left: 700px; top: 9100px; height: 400px; border: 2px solid black">
+
+         <iframe style = "width:560px; height: 315px; top: 9600px; position: absolute; left: 395px" src="https://www.youtube.com/embed/VPfX3QV-WZ8?start=28" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            
+
         </div>
 
 
