--- a/borrowingApp.html
+++ b/borrowingApp.html
@@ -246,11 +246,20 @@
 
         <div>
           <h4 class = "g" style="top: 9040px">Final Design</h4>
-          <img src="Home.jpg" style="position: absolute; left: 150px; top: 9100px; height: 400px; border: 2px solid black">
-          <img src="Post.jpg" style="position: absolute; left: 400px; top: 9100px; height: 400px; border: 2px solid black">
-          <img src="Homescreen.jpg" style="position: absolute; left: 700px; top: 9100px; height: 400px; border: 2px solid black">
+          <p style="top: 9045px; position: absolute; left: 320px"> - Final Prototype <a href = "http://a10-borrowngo.herokuapp.com/">here!</a></p>
+          <img src="Homescreen.jpg" style="position: absolute; left: 150px; top: 9100px; height: 400px; border: 2px solid black">
+          <img src="Home.jpg" style="position: absolute; right: 700px; top: 9100px; height: 400px; border: 2px solid black">
+          <img src="Pop-out.jpg" style="position: absolute; left: 700px; top: 9100px; height: 400px; border: 2px solid black">
+          <img src="Re-Fi.jpg" style="position: absolute; right: 150px; top: 9100px; height: 400px; border: 2px solid black">
+          <img src="Post.jpg" style="position: absolute; left: 150px; top: 9550px; height: 400px; border: 2px solid black">
+          <img src="borrow.jpg" style="position: absolute; right: 700px; top: 9550px; height: 400px; border: 2px solid black">
+          <img src="Request.jpg" style="position: absolute; left: 700px; top: 9550px; height: 400px; border: 2px solid black">
+          <img src="lend.jpg" style="position: absolute; right: 150px; top: 9550px; height: 400px; border: 2px solid black">
+          <img src="details.jpg" style="position: absolute; left: 150px; top: 10000px; height: 400px; border: 2px solid black">
+          <img src="closetH.jpg" style="position: absolute; right: 725px; top: 10000px; height: 400px; border: 2px solid black">
 
-         <iframe style = "width:560px; height: 315px; top: 9600px; position: absolute; left: 395px" src="https://www.youtube.com/embed/VPfX3QV-WZ8?start=28" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+         <iframe style = "width:560px; height: 315px; top: 10000px; position: absolute; left: 640px" src="https://www.youtube.com/embed/VPfX3QV-WZ8?start=28" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             
 
         </div>
@@ -259,7 +268,7 @@
 
 
 <br><br>
-<p style="color: white; position: absolute; top: 10000px">     .....................                    <br>               .................        <br>      ...........        </p>
+<p style="color: white; position: absolute; top: 20000px">     .....................                    <br>               .................        <br>      ...........        </p>
         
   
       <!--<article style = "padding:10px;float: left; width:40%">
