--- a/index.html
+++ b/index.html
@@ -42,11 +42,8 @@
       line-height: 35px;
       }
       .project1{
-      position: absolute;
       width: 1000px;
       height: 275px;
-      left: 175px;
-      top: 400px;
       border: 1px solid #000000;
       box-sizing: border-box;
       border-radius: 5px;
@@ -96,6 +93,37 @@
       .UC{
       	color: #274DB7;
       }
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
+
+      .jumbotron {
+		  padding-top: 3rem;
+		  padding-bottom: 3rem;
+		  margin-bottom: 0;
+		  background-color: #fffaff;
+		}
+
+		.jumbotron {
+		  padding-top: 3rem;
+		  padding-bottom: 3rem;
+		 position: center;
+		  margin-bottom: 0;
+		  background-color: #fffaff;
+		}
+
+		@media (min-width: 768px) {
+		  .jumbotron {
+		    padding-top: 6rem;
+		    padding-bottom: 6rem;
+		  }
+		}
+		.jumbotron h1 {
+  			font-weight: 400;
+  			font-size: 25px;
+		}
 
     /* This container is needed to position the front and back side */
 
@@ -103,7 +131,7 @@
 
     <title>About me</title>
   </head>
-  <body style = "margin-bottom: 100px">
+  <body style = "margin-bottom: 100px">  
     <div class = "rec"></div>
     <div class = "container">
     <div class = "row" style="padding-top: 30px" >
@@ -131,14 +159,22 @@
       </div>
     </div>
   </div>
-  
-    <h1 class = "intro">Hi I'm <span class = "name"> Sophia Dominguez</span> <br>a <span class = "UC">UX designer</span> <br> a third year at <span class = "school">UC San Diego.</h1>
+
+  <section>
+  	<div class="container jumbotron align-items-center">
+  		<h1>Hi I'm Sophia Dominguez a UX designer and a third year at UCSD. </h1>
+  	</div>
+  </section>
+
+  <div class="container jumbotron p-4 p-md-5 " >
+  	<a href="borrowingApp.html"> <img src="coverPage.jpg" width="1000px" class="project1">
+  </div>
+
     <h3 class = "look">Check out some of my work below </h3>
-    <a href = "borrowingApp.html"><img class = "project1" src="coverPage.jpg"> </a>
+
 
       
     <a href = "borrowingApp.html"> <img class = "project3" src="borrow.n.go.jpg"> </div>
-    <p style="color: white; position: absolute; top: 1000px">     ...    </p>
 
       <!--<article style = "padding:10px;float: left; width:40%">
         <img src = "IMG_1668[3250].jpg" style = "height: 500px;">
