--- a/index.html
+++ b/index.html
@@ -57,11 +57,8 @@
      
       .project3
       {
-      position: absolute;
       width: 1000px;
       height: 275px;
-      left: 175px;
-      top: 700px;
       border: 1px solid #000000;
       box-sizing: border-box;
       border-radius: 5px;
@@ -108,7 +105,7 @@
 
 		.jumbotron {
 		  padding-top: 3rem;
-		  padding-bottom: 3rem;
+		  padding-bottom: 2rem;
 		 position: center;
 		  margin-bottom: 0;
 		  background-color: #fffaff;
@@ -162,19 +159,24 @@
 
   <section>
   	<div class="container jumbotron align-items-center">
-  		<h1>Hi I'm Sophia Dominguez a UX designer and a third year at UCSD. </h1>
+  		<h1>Hi I'm Sophia Dominguez <br>a <span class="school">UX  </span> designer <br>a third year at <span class = "UC"> UC San Diego. </span></h1>
   	</div>
   </section>
 
   <div class="container jumbotron p-4 p-md-5 " >
-  	<a href="borrowingApp.html"> <img src="coverPage.jpg" width="1000px" class="project1">
+  	<h3 class = "look">Check out some of my work below </h3> 
+
+  	<a href="borrowingApp.html"> <img src="coverPage.jpg" width="1000px" class="project1"> <br> <br> <br> 
+  	<a href = "borrowingApp.html"> <img class = "project3" src="borrow.n.go.jpg"> </div>
+
   </div>
 
-    <h3 class = "look">Check out some of my work below </h3>
+
+
+
 
 
       
-    <a href = "borrowingApp.html"> <img class = "project3" src="borrow.n.go.jpg"> </div>
 
       <!--<article style = "padding:10px;float: left; width:40%">
         <img src = "IMG_1668[3250].jpg" style = "height: 500px;">
