--- a/borrowingApp.html
+++ b/borrowingApp.html
@@ -150,7 +150,7 @@
   
   <div class="jumbotron container">
     <h1 class = "borrowing"> Borrowing Clothes Mobile App</h1> <br> <br> <br>
-    <img src="slide.jpg" style="height: 500px;" class="center">
+    <img src="slide.jpg" style="height: 500px;" class="center img-fluid">
   </div>
 
   <div class="container jumbotron">
