--- a/index.html
+++ b/index.html
@@ -41,10 +41,7 @@
       .project1{
       width: 1000px;
       height: 275px;
-      border: 1px solid #000000;
-      box-sizing: border-box;
-      border-radius: 5px;
-      background-color: transparent;
+      
       }
       .project1:hover {
  		 -ms-transform: scale(1.1); /* IE 9 */
@@ -56,10 +53,6 @@
       {
       width: 1000px;
       height: 275px;
-      border: 1px solid #000000;
-      box-sizing: border-box;
-      border-radius: 5px;
-      background-color: transparent;
       }
       .project3:hover {
  		 -ms-transform: scale(1.1); /* IE 9 */
@@ -163,8 +156,8 @@
   <div class="container jumbotron p-4 p-md-5 " >
   	<h3 class = "look">Check out some of my work below </h3> 
 
-  	<a href="borrowingApp.html"> <img src="coverPage.jpg" width="1000px" class="project1"> <br> <br> <br> 
-  	<a href = "borrowingApp.html"> <img class = "project3" src="borrow.n.go.jpg"> </div>
+  	<a href="borrowingApp.html"> <img src="coverPage.jpg" width="1000px" class="project1 img-thumbnail"> <br> <br> <br> 
+  	<a href = "borrowingApp.html"> <img class = "project3 img-thumbnail" src="borrow.n.go.jpg"> </div>
 
   </div>
 
