--- a/borrowingApp.html
+++ b/borrowingApp.html
@@ -174,13 +174,13 @@
 
   <div class = "container jumbotron">
     <h4>User Personas</h4>
-    <img src="Personas3.jpg" style = "width: 700px; left: 325px " class="center">
+    <img src="Personas3.jpg" style = "width: 700px; left: 325px " class="center img-fluid">
   </div>
 
   <div class = "container jumbotron">
     <h4>Competitive audit</h4>
     <p>Why choose us over our competitors: Unlike other clothing options, our app does not require users to spend money. Buying new clothes can be expensive, non eco-friendly, and can take up so much space in your closet. Renting clothes, although eco-friendly, requires the user to spend money. They spend less than if they bought it, but they are still spending a monthly amount on clothes they do not get to keep. Our app meets users needs while keeping costs low.</p>
-    <img src="Untitled-3.jpg" style="width: 1000px; left: 175px" class="center">
+    <img src="Untitled-3.jpg" style="width: 1000px; left: 175px" class="center img-fluid">
   </div>
     
   <div class="container jumbotron">
