--- a/borrowingApp.html
+++ b/borrowingApp.html
@@ -177,7 +177,7 @@
 
   <div class="container jumbotron">
     <h4>Problem Statement</h4>
-    <p>Problem statement three ish lines <br> Second line <br> third line </p> 
+    <p> Whether you buy or rent your clothes, the bill can add up. Was that shirt you only wore once really worth it? With the constant changing fashion trends, and closets stuffed to the brim with clothing we only wore once, people need an economical way to dress as they like.  </p> 
   </div>
         
   <div class = "container jumbotron">
