--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         background-color: #fffaff;
       }
       .rec{
-        position: absolute;
+      position: absolute;
       width: 100%;
       height: 100px;
       left: 1px;
@@ -157,7 +157,7 @@
   	<h3 class = "look">Check out some of my work below </h3> 
 
   	<a href="borrowingApp.html"> <img src="coverPage.jpg" width="1000px" class="project1 img-thumbnail"> <br> <br> <br> 
-  	<a href = "borrowingApp.html"> <img class = "project3 img-thumbnail" src="borrow.n.go.jpg"> </div>
+  	<a href = "spotify.html"> <img class = "project3 img-thumbnail" src="Untitled-6.jpg"> </div>
 
   </div>
 
