--- a/borrowingApp.html
+++ b/borrowingApp.html
@@ -177,7 +177,7 @@
 
   <div class="container jumbotron">
     <h4>Problem Statement</h4>
-    <p> Whether you buy or rent your clothes, the bill can add up. Was that shirt you only wore once really worth it? With the constant changing fashion trends, and closets stuffed to the brim with clothing we only wore once, people need an economical way to dress as they like.  </p> 
+    <p> Whether you buy or rent your clothes, the bill can add up. Was that shirt you only wore once really worth it? With the constant changing fashion trends, and closets stuffed to the brim with clothing we only wore once, people need an economical way to dress as they like.</p> 
   </div>
         
   <div class = "container jumbotron">
@@ -203,7 +203,7 @@
     <div class="row">
       <div class="col-sm">
         <img src="Storyboard.jpg" style="width: 500px" class="img-fluid">
-        <p style=" font-size: 16px; line-height: 20px">In our first scenario, we have Kevin. He wants to buy new shoes but they are pretty pricey. He wants to try them out and see if he could really see himself wearing them before committing to such a decision. Renting them will take away from his shoe budget but he does not want to buy shoes again for them to just sit in his closet like his previous pairs. Kevin’s problem is solved by our app, as he can borrow the shoes he wants at no monetary cost to him and make a better informed decision. This storyboard, the user’s main need, was an economical way to make a better informed purchasing decision. </p>
+        <p style=" font-size: 16px; line-height: 20px">In our first scenario, we have Kevin. He wants to buy new shoes but they are pretty pricey. He wants to try them out and see if he could really see himself wearing them before committing to such a decision. Kevin’s problem is solved by our app, as he can borrow the shoes he wants at no monetary cost to him and make a better informed decision. This storyboard, the user’s main need, was an economical way to make a better informed purchasing decision. </p>
       </div>
       <div class= "col-sm">
         <img src="storyboard_2.jpg" style=" width: 500px;" class="img-fluid">
