--- a/spotify.html
+++ b/spotify.html
@@ -225,6 +225,37 @@
     <h4> Problems and Trends</h1> 
     <p class="indent">After conducting some user tests, we analyzed our findings and found some common problems from errors users made. <br>The first problem we found was many users had trouble completing task #1, finding the profile page. Out of our 12 user tests, 9 of our interviewees had trouble finding the profile page in one try. Compared to the desktop version, the profile page is less visible on the mobile version, giving users a harder time. </p>
     <p>The next problem we found was that 6 out of 12 users had trouble deleting a song on a playlist. All 6 users first clicked on the edit playlist instead of simply clicking on the 3 dots next each song. Once they clicked on “edit playlist”, they failed to realize that they could from there swipe on a song to delete it. 2 of the users mentioned thinking that the minus sign next to each song acts as a bullet point to list each song but had no real purpose.  </p>
+    <p>9 out of 12 of our users mostly or exclusively used the mobile version and because of this they were unaware of some features found on the desktop app version. Out of the 9 interviewees, 7 users did not know you could edit playlists descriptions and 4 did not know you could change the cover picture of the playlist, features only available on the desktop version. </p>
+    <p>
+    The second to last problem we identified was 6 out of 12 users had difficulty completing task 8, finding the podcast “Tiny Meat Gang”. All 6 users clicked on the artist “Tiny Meat Gang” instead of the podcast. 
+    </p>
+    <p>The last problem we found was 7 out of 12 of our users could not complete the last task, make their listening activity private. 2 of our interviewees first tried to complete this task by clicking on the edit playlist. In their mental model, the edit playlist feature would also allow them to control features beyond editing the physical playlist. The other five went to the user profile page and clicked on find friends, expecting this button to lead them to all the social aspects of Spotify. Instead it led them to connect their Spotify account with Facebook to find their Facebook friends on Spotify. </p>
+  </div>
+
+  <div class="jumbotron container">
+    <h4>Competitive Analysis</h4>
+    <img src="competitive.jpg" style="height: 650px; width: 60%" class="center img-fluid">
+    <p>From personal experience, user responses and research, we created a design space to compare different streaming services. We rated them on compactness and visibility. Compactness here is defined as spacing between features and visibility is the visibility of features.  In this graph, the ideal design is one with the highest visibility and lowest compactness.</p>
+  </div>
+
+  <div class="jumbotron container">
+    <p> As a team, we proposed different redesign features and voted on them. Since we had a pretty small team, only ideas that the entire team approved of were implemented. We go inspiration from some of the competitors 
+    </p>
+    
+  </div>
+
+  <div class="jumbotron container">
+    <h4>Final Design</h4>
+    <img src="playlistslayout.gif" height="500px">
+    <img src="profile.gif" height="500px">
+    <img src="playlist.gif" height="500px">
+    <img src="searchgif.gif" height="500px">
+  </div>
+
+  <div class="jumbotron container">
+    <h4>Next Steps</h4>
+    <p class="indent">If we were to continue this project, we would first conduct some user tests on our final designs to see if users made less mistakes while performing our tasks. Given the feedback we would receive, the goal would be to work on creating a smoother user experience. We feel that the scope of this redesign can be further expanded to include all Spotify platforms. From there, our next steps would be the addition of Spotify on platforms such as Android, PS4, and XBOX One in our comparisons to help us achieve our ultimate goal: a universal Spotify app.</p>
+    <p class="indent">This project was completed in my first design class and was my first UX project. I learned a lot about human-centered design in this class. Overall I had a great experience working with my team redesigning this app. </p>
   </div>
 
 
