--- a/borrowingApp.html
+++ b/borrowingApp.html
@@ -308,7 +308,8 @@
         <p style=" font-size: 18px; line-height: 20px">We measured the amount of clicks on buttons on the borrow and lend tabs to see which version led to more views of the borrow and lend tabs. Design B had the most amount of clicks and was the preferred version by the instructor, so we went with that design. <br> Additionally we received feedback from our peers on the branding of our app, the visibility of the shoes tab and the login page. We were told that we should appeal to our target audience more by rebranding our app, focusing more on the aesthetics of it. </p> <br>
         <h5>Changes made to Final Design</h5> <br>
         <img src="loginChange.jpg" style = "width: 90%;" class="center"> <br>
-        <img src="homeChange.jpg" style = "width: 90%;" class="center">
+        <img src="homeChange.jpg" style = "width: 90%;" class="center"> <br>
+        <img src="popupsChange.jpg" style = "width: 90%;" class="center">
       </div>
 
       <div class="jumbotron container">
