--- a/borrowingApp.html
+++ b/borrowingApp.html
@@ -188,13 +188,13 @@
 
   <div class = "container jumbotron">
     <h4>User Personas</h4>
-    <img src="Personas3.jpg" style = "width: 700px; left: 325px " class="center img-fluid">
+    <img src="Personas.jpg" style = "width: 700px;" class="center img-fluid">
   </div>
 
   <div class = "container jumbotron">
     <h4>Competitive audit</h4>
     <p>Why choose us over our competitors: Unlike other clothing options, our app does not require users to spend money. Buying new clothes can be expensive, non eco-friendly, and can take up so much space in your closet. Renting clothes, although eco-friendly, requires the user to spend money. They spend less than if they bought it, but they are still spending a monthly amount on clothes they do not get to keep. Our app meets users needs while keeping costs low.</p>
-    <img src="Untitled-3.jpg" style="width: 1000px; left: 175px" class="center img-fluid">
+    <img src="Untitled-3.jpg" style="width: 1000px;" class="center img-fluid">
   </div>
     
   <div class="container jumbotron">
@@ -220,11 +220,11 @@
     <p style=" font-size: 17px; line-height: 20px">We then created some digital wireframes on Adobe XD of our two main pages. Using these wirefames, we were able to visualize our app better.</p> <br>
     <div class="row">
       <div class="col-sm" style="width: 200px">
-        <img src="wireframe.png" style=" height: 500px; left: 400px; border: 2px solid black" class="img-fluid filter-imageR">
+        <img src="wireframe.png" style=" height: 500px; border: 2px solid black" class="img-fluid filter-imageR">
       </div>
       
       <div class="col-sm" style="width: 200px">
-            <img src="wireframe2.png" style=" height: 500px; left: 700px; border: 2px solid black" class="img-fluid filter-imageL">
+            <img src="wireframe2.png" style=" height: 500px;  border: 2px solid black" class="img-fluid filter-imageL">
       </div>
     </div>
     <br>
