--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
   <div class="container jumbotron p-4 p-md-5 " >
   	<h3 class = "look">Check out some of my work below </h3> 
 
-  	<a href="borrowingApp.html"> <img src="coverPage.jpg" width="1000px" class="project1 img-thumbnail"> <br> <br> <br> 
+  	<a href="borrowingApp.html"> <img src="coverPage2.jpg" width="1000px" class="project1 img-thumbnail"> <br> <br> <br> 
   	<a href = "spotify.html"> <img class = "project3 img-thumbnail" src="Untitled-6.jpg"> </div>
 
   </div>
