--- a/projects.html
+++ b/projects.html
@@ -156,7 +156,7 @@
 
   <div class="container jumbotron p-4 p-md-5 " >
 
-    <a href="borrowingApp.html"> <img src="coverPage.jpg" width="1000px" class="project1"> <br> <br> <br> 
+    <a href="borrowingApp.html"> <img src="coverPage2.jpg" width="1000px" class="project1"> <br> <br> <br> 
     <a href = "spotify.html"> <img class = "project3" src="borrow.n.go.jpg"> </div>
 
   </div>
