--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
         background-color: #fffaff;
       }
       .rec{
-        position: absolute;
+      position: absolute;
       width: 100%;
       height: 100px;
       left: 1px;
@@ -41,10 +41,7 @@
       .project1{
       width: 1000px;
       height: 275px;
-      border: 1px solid #000000;
-      box-sizing: border-box;
-      border-radius: 5px;
-      background-color: transparent;
+      
       }
       .project1:hover {
      -ms-transform: scale(1.1); /* IE 9 */
@@ -56,10 +53,6 @@
       {
       width: 1000px;
       height: 275px;
-      border: 1px solid #000000;
-      box-sizing: border-box;
-      border-radius: 5px;
-      background-color: transparent;
       }
       .project3:hover {
      -ms-transform: scale(1.1); /* IE 9 */
@@ -154,10 +147,11 @@
     </div>
   </div>
 
-  <div class="container jumbotron p-4 p-md-5 " >
 
-    <a href="borrowingApp.html"> <img src="coverPage2.jpg" width="1000px" class="project1"> <br> <br> <br> 
-    <a href = "spotify.html"> <img class = "project3" src="borrow.n.go.jpg"> </div>
+  <div class="container jumbotron p-4 p-md-5 " >
+   
+    <a href="borrowingApp.html"> <img src="coverPage2.jpg" width="1000px" class="project1 img-thumbnail"> <br> <br> <br> 
+    <a href = "spotify.html"> <img class = "project3 img-thumbnail" src="Untitled-6.jpg"> </div>
 
   </div>
 
