--- a/index.html
+++ b/index.html
@@ -59,6 +59,16 @@
 		  -webkit-transform: scale(1.1); /* Safari 3-8 */
 		  transform: scale(1.1); 
 		}
+		.project4
+      {
+      width: 1000px;
+      height: 275px;
+      }
+      .project4:hover {
+ 		 -ms-transform: scale(1.1); /* IE 9 */
+		  -webkit-transform: scale(1.1); /* Safari 3-8 */
+		  transform: scale(1.1); 
+		}
 
       .borrowing{
       position: absolute;
@@ -157,7 +167,9 @@
   	<h3 class = "look">Check out some of my work below </h3> 
 
   	<a href="borrowingApp.html"> <img src="coverPage2.jpg" width="1000px" class="project1 img-thumbnail"> <br> <br> <br> 
-  	<a href = "spotify.html"> <img class = "project3 img-thumbnail" src="Untitled-6.jpg"> </div>
+  	<a href = "plannigo.html"> <img class = "project4 img-thumbnail" src="PlannigoCover.jpg"><br> <br> <br>
+  	<a href = "spotify.html"> <img class = "project3 img-thumbnail" src="Untitled-6.jpg"> 
+  	 </div>
 
   </div>
 
