--- a/plannigo.html
+++ b/plannigo.html
@@ -166,6 +166,10 @@
     <h1 class = "borrowing"> Plannigo</h1> <br> <br> <br> <br>
     <h1>Page Under Construction</h1>
   </div>
+  <div class="jumbotron container">
+    <h4>Overview</h4>
+    <p>Over the course of 7 weeks, my team and I worked together to create an app to support college students learning from home during the pandemic. Students may be entering summer break soon, but more and more colleges are moving to online classes for the fall, prolonging the unique needs learning from home has brought. From our online research and interviews we conducted, we found students lacked motivation and structure in their lives they once had. My team and I created a planning app that allows students to share their schedule with peers and family members, helping them stay connected with others and create boundaries with their parents while living at home.</p>
+  </div>
 
   <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
