--- a/projects.html
+++ b/projects.html
@@ -151,7 +151,8 @@
   <div class="container jumbotron p-4 p-md-5 " >
    
     <a href="borrowingApp.html"> <img src="coverPage2.jpg" width="1000px" class="project1 img-thumbnail"> <br> <br> <br> 
-    <a href = "spotify.html"> <img class = "project3 img-thumbnail" src="Untitled-6.jpg"> </div>
+    <a href = "plannigo.html"> <img class = "project4 img-thumbnail" src="PlannigoCover.jpg"><br> <br> <br>
+    <a href = "spotify.html"> <img class = "project3 img-thumbnail" src="Untitled-6.jpg"> 
 
   </div>
 
