--- a/aboutme.html
+++ b/aboutme.html
@@ -97,6 +97,45 @@
         color: #274DB7;
       }
 
+    .jumbotron {
+      padding-top: 35px;
+      padding-bottom: 35px;
+      position: center;
+      margin-bottom: 0;
+      background-color: #fffaff;
+    }
+
+    @media (min-width: 768px) {
+      .jumbotron {
+        padding-top: 35px;
+        padding-bottom: 35px;
+      }
+    }
+    .jumbotron h1 {
+        font-weight: 600;    }
+
+    .center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
+    }
+    img.filter-imageR {
+    display: block;
+    margin-left: auto;
+    margin-right: right;
+    }
+    img.filter-imageL {
+    display: block;
+    margin-left: left;
+    margin-right: auto;
+    }
+    img.filter-image {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    }
+
     /* This container is needed to position the front and back side */
 
     </style>
@@ -131,10 +170,23 @@
       </div>
     </div>
   </div>
-  
+
+
+  <div class="jumbotron container">
+    <div class="row">
+     <div class="col-sm">
+       <img src="me2.jpg" width="500px">
+     </div>
+
+     <div class="col-sm" style="padding-top: 150px">
+       <h4>Hi I am Sophia Dominguez.</h4>
+       <p>I am a third year at UC San Diego studying Clinical Psychology and Cognitive Science HCI. </p>
+     </div>
+    </div>
+  </div>
    
 
-    <p style="color: white; position: absolute; top: 1000px">     ...    </p>
+    <p style="color: white; position: absolute; top: 700px">     ...    </p>
 
       <!--<article style = "padding:10px;float: left; width:40%">
         <img src = "IMG_1668[3250].jpg" style = "height: 500px;">
