--- a/plannigo.html
+++ b/plannigo.html
@@ -169,7 +169,63 @@
   <div class="jumbotron container">
     <h4>Overview</h4>
     <p>Over the course of 7 weeks, my team and I worked together to create an app to support college students learning from home during the pandemic. Students may be entering summer break soon, but more and more colleges are moving to online classes for the fall, prolonging the unique needs learning from home has brought. From our online research and interviews we conducted, we found students lacked motivation and structure in their lives they once had. My team and I created a planning app that allows students to share their schedule with peers and family members, helping them stay connected with others and create boundaries with their parents while living at home.</p>
+    <span style=" font-size: 18px">Team: <span style="color: #707070"> Sophia Dominguez, </span> <br>
+      Timeline: <span style="color: #707070">7 weeks </span> <br>
+      Tools: <span style="color: #707070">Figma</span>
   </div>
+
+  <div class="jumbotron container">
+    <h4>Problem Statement</h4>
+  </div>
+
+  <div class="jumbotron container">
+    <h4>User Research/Needfinding</h4>
+  </div>
+
+  <div class="jumbotron container">
+    <h4>User Personas</h4>
+  </div>
+
+  <div class="jumbotron container">
+    <h4>Competitive Audit</h4>
+  </div>
+
+  <div class="jumbotron container">
+    <h4>Storyboards</h4>
+  </div>
+
+  <div class="jumbotron container">
+    <h4>Sketches</h4>
+  </div>
+
+  <div class="jumbotron container">
+    <h4>Low-fidelity Prototype</h4>
+  </div>
+
+  <div class="jumbotron container">
+    <h4>Mood Board</h4>
+  </div>
+
+  <div class="jumbotron container">
+    <h4>Style Guide</h4>
+  </div>
+
+  <div class="jumbotron container">
+    <h4>High-Fidelity Prototype</h4>
+  </div>
+
+  <div class="jumbotron container">
+    <h4>User Testing</h4>
+  </div>
+
+  <div class="jumbotron container">
+    <h4>Final Product</h4>
+  </div>
+
+  <div class="jumbotron container">
+    <h4>Next Steps</h4>
+  </div>
+
 
   <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
