--- a/borrowingApp.html
+++ b/borrowingApp.html
@@ -152,7 +152,7 @@
                   <a class = "nav-item nav-link active" href = "projects.html" style = "padding-left: 20px; color: #707070"> Projects <span class = "sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class = "nav-item nav-link" target = "_blank" href = "index.html" style = "padding-left: 20px; color: #707070"> Resume </a>
+                  <a class = "nav-item nav-link" target = "_blank" href = "Resume_SD.pdf" style = "padding-left: 20px; color: #707070"> Resume </a>
                 </li>
               </ul>
             </div>
@@ -265,7 +265,7 @@
                   <img src="trans.jpg" width="200px" class="img-fluid filter-imageR">
                 </div>
 
-                <div class = "colsm">
+                <div class = "col-sm">
                   <img src="transition.jpg" width="200px" class="filter-image">
                 </div>
 
@@ -309,7 +309,9 @@
         <h5>Changes made to Final Design</h5> <br>
         <img src="loginChange.jpg" style = "width: 90%;" class="center"> <br>
         <img src="homeChange.jpg" style = "width: 90%;" class="center"> <br>
-        <img src="popupsChange.jpg" style = "width: 90%;" class="center">
+        <img src="popupsChange.jpg" style = "width: 90%;" class="center"> <br>
+        <img src="postingChange.jpg" style = "width: 90%;" class="center"><br>
+        <img src="closetChange.jpg" style = "width: 90%;" class="center">
       </div>
 
       <div class="jumbotron container">
