--- a/spotify.html
+++ b/spotify.html
@@ -157,7 +157,7 @@
                 <a class = "nav-item nav-link active" href = "projects.html" style = "padding-left: 20px; color: #707070"> Projects <span class = "sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class = "nav-item nav-link" target = "_blank" href = "index.html" style = "padding-left: 20px; color: #707070"> Resume </a>
+                <a class = "nav-item nav-link" target = "_blank" href = "Resume_SD.pdf" style = "padding-left: 20px; color: #707070"> Resume </a>
               </li>
             </ul>
           </div>
@@ -179,7 +179,7 @@
   </div>
   <div class="container jumbotron">
     <h4>Problem Statement</h4>
-    <p> Differences in functionality between the mobile app and desktop or browser version creates a Gulf of Execution for mobile users who simultaneously use the desktop/browser version
+    <p> Differences in functionality between the mobile app and desktop or browser version creates a Gulf of Execution for mobile users who simultaneously use the desktop/browser version.
       How can we make the Spotify mobile app more productive, functionable, & visible so that users can utilize the app to its full potential? </p> 
   </div>
   <div class="container jumbotron">
