--- a/projects.html
+++ b/projects.html
@@ -138,7 +138,7 @@
                 <a class = "nav-item nav-link active" href = "projects.html" style = "padding-left: 20px; color: #707070"> Projects <span class = "sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class = "nav-item nav-link" target = "_blank" href = "index.html" style = "padding-left: 20px; color: #707070"> Resume </a>
+                <a class = "nav-item nav-link" target = "_blank" href = "Resume_SD.pdf" style = "padding-left: 20px; color: #707070"> Resume </a>
               </li>
             </ul>
           </div>
