--- a/spotify.html
+++ b/spotify.html
@@ -239,8 +239,12 @@
   </div>
 
   <div class="jumbotron container">
-    <p> As a team, we proposed different redesign features and voted on them. Since we had a pretty small team, only ideas that the entire team approved of were implemented. We go inspiration from some of the competitors 
+    <h4>Alternative Designs</h4>
+    <p> As a team, we proposed different redesign features and voted on them. Since we had a pretty small team, only ideas that the entire team approved of were implemented. 
     </p>
+    <img src="ana3.jpg" class="center img-fluid" style = "height: 500px; width: 60%">
+    <p style="text-align: center; font-size: 15px;">Here, we voted for either an implementation of a feature or the redesign of a feature.</p>
+    <p>We go inspiration from some of the competitors, like the Apple Music mobile app.  We also drew inspiration from other Spotify versions, such as the desktop app and the non-Spotify premuium mobile app.</p>
     
   </div>
 
