--- a/spotify.html
+++ b/spotify.html
@@ -110,7 +110,7 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 90%;
+    width: 99%;
     }
     img.filter-imageR {
     display: block;
@@ -224,11 +224,35 @@
   <div class="jumbotron container">
     <h4> Problems and Trends</h1> 
     <p class="indent">After conducting some user tests, we analyzed our findings and found some common problems from errors users made. <br>The first problem we found was many users had trouble completing task #1, finding the profile page. Out of our 12 user tests, 9 of our interviewees had trouble finding the profile page in one try. Compared to the desktop version, the profile page is less visible on the mobile version, giving users a harder time. </p>
+    <div class="row">
+      <div class="col-sm">
+        <img src="profileMistake.gif" width="190px" class="filter-image img-fluid">
+        <p style="text-align: center; font-size: 15px;">Here, one of our interviewees had trouble finding the profile page, first incorrectly going to the library.</p>
+      </div>
+      <div class="col-sm">
+        <img src="profileComp.gif" height="340px" class="filter-image img-fluid">
+        <p style="text-align: center; font-size: 15px;">In comparison, on the mobile desktop app version, the same user was able to quickly and immediately go to the profile page.</p>
+      </div>
+    </div>
     <p>The next problem we found was that 6 out of 12 users had trouble deleting a song on a playlist. All 6 users first clicked on the edit playlist instead of simply clicking on the 3 dots next each song. Once they clicked on “edit playlist”, they failed to realize that they could from there swipe on a song to delete it. 2 of the users mentioned thinking that the minus sign next to each song acts as a bullet point to list each song but had no real purpose.  </p>
+    <div class="row">
+      <div class="col-sm">
+        <img src="playlistDelete.gif" width="213px" class="filter-image img-fluid">
+        <p style="text-align: center; font-size: 15px;">Here is an example of deleting a song from the edit playlist feature, swiping on the first song to delete it from the playlist.</p>
+      </div>
+      <div class="col-sm">
+        <img src="delete.jpg" width="190px" class="filter-image img-fluid">
+        <p style="text-align: center; font-size: 15px;">Circled in red is the current signifier that lets users know that they can delete a song from the playlist there.</p>
+      </div>
+    </div>
     <p>9 out of 12 of our users mostly or exclusively used the mobile version and because of this they were unaware of some features found on the desktop app version. Out of the 9 interviewees, 7 users did not know you could edit playlists descriptions and 4 did not know you could change the cover picture of the playlist, features only available on the desktop version. </p>
+      <img src="comp.gif" width="500px" class="filter-image img-fluid">
+      <p style="text-align: center; font-size: 15px; width: 600px">Some users did not know that on the desktop version, you could change the playlist cover and the playlist description. In this gif, those features are highlighted.</p>
     <p>
     The second to last problem we identified was 6 out of 12 users had difficulty completing task 8, finding the podcast “Tiny Meat Gang”. All 6 users clicked on the artist “Tiny Meat Gang” instead of the podcast. 
     </p>
+      <img src="tinyMeatGang.png" width="190px" class="filter-image img-fluid">
+      <p style="text-align: center; font-size: 15px; width: 600px">Here, the top arrow points to the selection "Tiny Meat Gang" the artist, which many of our interviewees clicked on instead of the podcast, which the bottom arrow points to.</p>
     <p>The last problem we found was 7 out of 12 of our users could not complete the last task, make their listening activity private. 2 of our interviewees first tried to complete this task by clicking on the edit playlist. In their mental model, the edit playlist feature would also allow them to control features beyond editing the physical playlist. The other five went to the user profile page and clicked on find friends, expecting this button to lead them to all the social aspects of Spotify. Instead it led them to connect their Spotify account with Facebook to find their Facebook friends on Spotify. </p>
   </div>
 
@@ -250,10 +274,20 @@
 
   <div class="jumbotron container">
     <h4>Final Design</h4>
-    <img src="playlistslayout.gif" height="500px">
-    <img src="profile.gif" height="500px">
-    <img src="playlist.gif" height="500px">
-    <img src="searchgif.gif" height="500px">
+      <div class="row">
+        <div class="col-sm">
+              <img src="playlistslayout.gif" style="height: 450px; border: 2px solid black" class="img-fluid">
+        </div>
+        <div class="col-sm">
+          <img src="profile.gif" style=" height: 450px; border: 2px solid black" class="img-fluid">
+        </div>
+        <div class="col-sm">
+          <img src="playlist.gif" style=" height: 450px; border: 2px solid black" class="img-fluid">
+        </div>
+        <div class="col-sm">
+          <img src="searchgif.gif" style=" height: 450px; border: 2px solid black" class="img-fluid">
+        </div>            
+      </div>
   </div>
 
   <div class="jumbotron container">
