--- a/spotify.html
+++ b/spotify.html
@@ -260,6 +260,7 @@
     <h4>Competitive Analysis</h4>
     <img src="competitive.jpg" style="height: 650px; width: 60%" class="center img-fluid">
     <p>From personal experience, user responses and research, we created a design space to compare different streaming services. We rated them on compactness and visibility. Compactness here is defined as spacing between features and visibility is the visibility of features.  In this graph, the ideal design is one with the highest visibility and lowest compactness.</p>
+    <p>In the left hand corner, we have the Spotify web page and desktop app. They both have very similar features and layouts, and have the most space to fit all the features. Due to their similarity, we placed them together. On the right hand corner, we have our redesign, being a little more compact than the original but with its features more visible. Apple music received similar ratings as our redesign as we drew some inspiration from it, and Spotify and Apple Music have similar layouts and features available. Pandora offers less features, making it a bit less compact. Soundcloud on the bottom right has the least amount of visibility in terms of features. </p>
   </div>
 
   <div class="jumbotron container">
