--- a/plannigo.html
+++ b/plannigo.html
@@ -208,7 +208,7 @@
 
   <div class="jumbotron container">
     <h4>Style Guide</h4>
-    <img src="styleGuide.png">
+    <img src="styleGuide.png" class="center">
   </div>
 
   <div class="jumbotron container">
