--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
     <style type="text/css">
       body{
-        background-color: #fffaff;
+        background-color: #CCA69B;
       }
       .rec{
       position: absolute;
@@ -39,7 +43,7 @@
       line-height: 35px;
       }
       .project1{
-      width: 1000px;
+      width:50%;
       height: 275px;
       
       }
@@ -51,7 +55,7 @@
      
       .project3
       {
-      width: 1000px;
+      width: 50%;
       height: 275px;
       }
       .project3:hover {
@@ -61,8 +65,9 @@
 		}
 		.project4
       {
-      width: 1000px;
+      width:50%;
       height: 275px;
+      align-content: right;
       }
       .project4:hover {
  		 -ms-transform: scale(1.1); /* IE 9 */
@@ -86,29 +91,40 @@
       }
       .school{
       	color: #B78727;
+      	font-family: Roboto;
+      	font-style: normal;
+      	font-weight: 300;
       }
       .UC{
       	color: #274DB7;
+      	font-family: Roboto;
+      	font-style: normal;
+      	font-weight:300;
+      }
+      .myName{
+      	font-family: Roboto;
+      	font-style: normal;
+      	font-weight: 700;
       }
       @media (min-width: 768px) {
         .bd-placeholder-img-lg {
           font-size: 3.5rem;
         }
       }
-
+/*
       .jumbotron {
 		  padding-top: 3rem;
 		  padding-bottom: 3rem;
 		  margin-bottom: 0;
 		  background-color: #fffaff;
 		}
-
+*/
 		.jumbotron {
 		  padding-top: 3rem;
 		  padding-bottom: 2rem;
 		 position: center;
 		  margin-bottom: 0;
-		  background-color: #fffaff;
+		  background-color: #CCA69B;
 		}
 
 		@media (min-width: 768px) {
@@ -119,7 +135,10 @@
 		}
 		.jumbotron h1 {
   			font-weight: 400;
-  			font-size: 25px;
+  			font-size: 85px;
+  			font-family: Roboto;
+      		font-style: normal;
+      		font-weight: 100;
 		}
 
     /* This container is needed to position the front and back side */
@@ -159,14 +178,14 @@
 
   <section>
   	<div class="container jumbotron align-items-center">
-  		<h1>Hi I'm Sophia Dominguez <br>a <span class="school">UX  </span> designer <br>a third year at <span class = "UC"> UC San Diego. </span></h1>
+  		<h1>Hi I'm <span class="myName">Sophia Dominguez </span><br>a <span class="school">UX designer </span><br>a third year at <span class = "UC"> UC San Diego. </span></h1>
   	</div>
   </section>
 
-  <div class="container jumbotron p-4 p-md-5 " >
+  <div class="container jumbotron p-4 p-md-1 ">
   	<h3 class = "look">Check out some of my work below </h3> 
 
-  	<a href="borrowingApp.html"> <img src="coverPage2.jpg" width="1000px" class="project1 img-thumbnail"> <br> <br> <br> 
+  	<a href="borrowingApp.html"> <img src="coverPage2.jpg"  class="project1 img-thumbnail"> <br> <br> <br> 
   	<a href = "plannigo.html"> <img class = "project4 img-thumbnail" src="PlannigoCover.jpg"><br> <br> <br>
   	<a href = "spotify.html"> <img class = "project3 img-thumbnail" src="Untitled-6.jpg"> 
   	 </div>
